packages/beff-core/tests/snapshots/safe_to_change__tests__fail1.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): "world" => {
                    return "world";
                }
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): string => {
                    return "world";
                }
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type New = string;
```

```ts
type Old = "world";
```

Previous clients will not support this potential response:

```js
"Izr1mn6edP0HLrWu";
```
