packages/beff-core/tests/snapshots/safe_to_change__tests__fail5.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): {p:"a"|"b"} => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): {p:"a"|"b"|"c"} => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = {
    "p": ("a" | "b");
};
```

```ts
type New = {
    "p": ("a" | "b" | "c");
};
```

```ts
type Diff = ({
    "p": ("a" | "b" | "c");
} & Not<{
    "p": ("a" | "b");
}>);
```

```ts
type Evidence = {
    "p": ("c");
};
```

Previous clients will not support this potential response:

evidence:

```js
{
    "p": "c"
};
```
