packages/beff-core/tests/snapshots/safe_to_change__tests__fail6.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): ({p:"a"|"b"}&{a:1}) => todo(),
                post: (): ({p:"a"|"b",a:1}) => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): ({p:"a"|"b"|"c"}&{a:1}) => todo(),
                post: (): ({p:"a"|"b"|"c",a:1}) => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = ({
    "a": 1;
} & {
    "p": ("a" | "b");
});
```

```ts
type New = ({
    "a": 1;
} & {
    "p": ("a" | "b" | "c");
});
```

Previous clients will not support this response:

```json
{
  "a": 1,
  "p": "c"
}
```

# Error at POST /hello:

Response body is not compatible.

```ts
type Old = {
    "a": 1;
    "p": ("a" | "b");
};
```

```ts
type New = {
    "a": 1;
    "p": ("a" | "b" | "c");
};
```

Previous clients will not support this response:

```json
{
  "a": 1,
  "p": "c"
}
```
