packages/beff-core/tests/snapshots/safe_to_change__tests__fail7.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): 1 => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): 2 => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = 1;
```

```ts
type New = 2;
```

```ts
type Diff = 2;
```

```ts
type Evidence = (2);
```

Previous clients will not support this potential response:

evidence:

```js
2;
```
