packages/beff-core/tests/snapshots/safe_to_change__tests__fail_body_1.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        type A = "a";
        export default {
            "/hello": {
                get: (c:Ctx, a: A):A => impl()
            }
        }
        
to:

        type A = "a"|"b";
        export default {
            "/hello": {
                get: (c:Ctx, a: A):A => impl()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = "a";
```

```ts
type New = "a" | "b";
```

```ts
type Diff = "b";
```

Previous clients will not support this potential response:

```js
"b";
```
