packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union2.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): {ok: true, data: string} | {ok:false, data: number} => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): {ok: true, data: string} | {ok:false, data: boolean} => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = ({
    "data": string;
    "ok": true;
} | {
    "data": number;
    "ok": false;
});
```

```ts
type New = ({
    "data": boolean;
    "ok": false;
} | {
    "data": string;
    "ok": true;
});
```

```ts
type Diff = (({
    "data": boolean;
    "ok": false;
} & (Not<{
    "data": string;
    "ok": true;
}> & Not<{
    "data": number;
    "ok": false;
}>)) | (({
    "data": string;
    "ok": true;
} & (Not<{
    "data": string;
    "ok": true;
}> & Not<{
    "data": number;
    "ok": false;
}>)) & Not<{
    "data": boolean;
    "ok": false;
}>));
```

Previous clients will not support this potential response:

evidence:

```js
{
    "data": true,
    "ok": false
};
```
