packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union3.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): {ok: true, data: string} | {ok:false, data: number} => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): {ok: true, data: string} | {data: number} => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = { "data": string; "ok": true } | { "data": number; "ok": false };
```

```ts
type New = { "data": string; "ok": true } | { "data": number };
```

Old clients will not support this response:

```json
{
  "data": 123,
  "ok": "abc"
}
```
