packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union_arr631.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): ["a1", {a:['a3',number]}]|["a2", {a:boolean[]}] => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): ["a1", {a:['a4',number]}]|["a2", {a:boolean[]}] => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = (["a1", {
        "a": ["a3", number];
    }] | ["a2", {
        "a": Array<boolean>;
    }]);
```

```ts
type New = (["a1", {
        "a": ["a4", number];
    }] | ["a2", {
        "a": Array<boolean>;
    }]);
```

Old clients will not support this response:

```json
[
  "a1",
  {
    "a": [
      "a4",
      123
    ]
  }
]
```
